# opencog

examples/commander/: main.js
examples/openpsi/: basic.scm
opencog/: CMakeLists.txt
opencog/commander/: CMakeLists.txt  CommanderServer.cc  CommanderServer.h  CommanderServerMain.cc  README.md  RpcSyncExecutor.cc  RpcSyncExecutor.h  bak  note.txt
opencog/commander/WebSocketIO/: Server.h
opencog/commander/WebSocketIO/example/web/: main.js
opencog/commander/crossguid/: guid.cpp  guid.hpp
tests/: CMakeLists.txt
tests/commander/: CMakeLists.txt  CommanderServerUTest.cxxtest  CommanderUTest.cxxtest  foo.scm
